[package]
name = "sakura"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { workspace = true }
wgpu = { workspace = true }

sakura-math = { path = "../sakura-math" }
sakura-runtime = { path = "../sakura-runtime" }
sakura-winit = { path = "../sakura-winit" }
sakura-gpu = { path = "../sakura-gpu" }
